--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.0.0",
   "name": "@ayloncarrijo/global-configs",
   "private": true,
+  "prettier": "./packages/prettier-config",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
