--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.7.2",
+  "version": "1.8.0",
   "name": "@ayloncarrijo/eslint-config",
   "license": "MIT",
   "main": "./index.js",
@@ -7,8 +7,8 @@
     "index.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^8.36.0",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
